<resources>
  <string name="abbrev_month_day_no_year">MMMd</string>
  <string name="abbrev_wday_month_day_no_year_alarm">EEEMMMd</string>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_menu_alt_shortcut_label">Alt+</string>
  <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
  <string name="abc_menu_delete_shortcut_label">delete</string>
  <string name="abc_menu_enter_shortcut_label">enter</string>
  <string name="abc_menu_function_shortcut_label">Function+</string>
  <string name="abc_menu_meta_shortcut_label">Meta+</string>
  <string name="abc_menu_shift_shortcut_label">Shift+</string>
  <string name="abc_menu_space_shortcut_label">space</string>
  <string name="abc_menu_sym_shortcut_label">Sym+</string>
  <string name="abc_prepend_shortcut_label">Menu+</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_slice_more">More</string>
  <string name="abc_slice_more_content">+ %1$d</string>
  <string name="abc_slice_permission_allow">Allow</string>
  <string name="abc_slice_permission_deny">Deny</string>
  <string name="abc_slice_permission_text_1">- It can read information from %1$s</string>
  <string name="abc_slice_permission_text_2">- It can take actions inside %1$s</string>
  <string name="abc_slice_permission_title">Allow %1$s to show %2$s slices?</string>
  <string name="abc_slice_show_more">Show more</string>
  <string name="abc_slice_updated">Updated %1$s</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="accessibility_accessibility_button">Accessibility</string>
  <string name="accessibility_action_divider_bottom_full">Bottom full screen</string>
  <string name="accessibility_action_divider_left_30">Left 30%</string>
  <string name="accessibility_action_divider_left_50">Left 50%</string>
  <string name="accessibility_action_divider_left_70">Left 70%</string>
  <string name="accessibility_action_divider_left_full">Left full screen</string>
  <string name="accessibility_action_divider_right_full">Right full screen</string>
  <string name="accessibility_action_divider_top_30">Top 30%</string>
  <string name="accessibility_action_divider_top_50">Top 50%</string>
  <string name="accessibility_action_divider_top_70">Top 70%</string>
  <string name="accessibility_action_divider_top_full">Top full screen</string>
  <string name="accessibility_action_pip_resize">Resize</string>
  <string name="accessibility_action_pip_stash">Stash</string>
  <string name="accessibility_action_pip_unstash">Unstash</string>
  <string name="accessibility_action_start_one_handed">Start one-handed mode</string>
  <string name="accessibility_action_stop_one_handed">Exit one-handed mode</string>
  <string name="accessibility_airplane_mode">Airplane mode.</string>
  <string name="accessibility_allow_diagonal_scrolling">Allow diagonal scrolling</string>
  <string name="accessibility_assistant_poodle">Voice search</string>
  <string name="accessibility_authenticate_hint">authenticate</string>
  <string name="accessibility_back">Back</string>
  <string name="accessibility_banner_message_dismiss">Dismiss</string>
  <string name="accessibility_battery_level">Battery %d percent.</string>
  <string name="accessibility_battery_level_charging">Battery charging, %d percent.</string>
  <string name="accessibility_battery_level_charging_paused">Battery %d percent, charging paused for battery protection.</string>
  <string name="accessibility_battery_level_charging_paused_with_estimate">Battery %1$d percent, %2$s, charging paused for battery protection.</string>
  <string name="accessibility_battery_level_with_estimate">Battery %1$d percent, %2$s</string>
  <string name="accessibility_battery_unknown">Battery percentage unknown.</string>
  <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
  <string name="accessibility_bluetooth_device_settings_gear">Click to configure device detail</string>
  <string name="accessibility_bluetooth_device_settings_pair_new_device">Click to pair new device</string>
  <string name="accessibility_bluetooth_device_settings_see_all">Click to see all devices</string>
  <string name="accessibility_bluetooth_name">Connected to %s.</string>
  <string name="accessibility_bouncer">enter screen lock</string>
  <string name="accessibility_brightness">Display brightness</string>
  <string name="accessibility_bubble_dismissed">Bubble dismissed.</string>
  <string name="accessibility_camera_button">Camera</string>
  <string name="accessibility_cast_name">Connected to %s.</string>
  <string name="accessibility_casting">@string/quick_settings_casting</string>
  <string name="accessibility_clear_all">Clear all notifications.</string>
  <string name="accessibility_control_change_favorite">favorite</string>
  <string name="accessibility_control_change_unfavorite">unfavorite</string>
  <string name="accessibility_control_decrease_window_height">Decrease height of magnifier</string>
  <string name="accessibility_control_decrease_window_width">Decrease width of magnifier</string>
  <string name="accessibility_control_favorite">Favorited</string>
  <string name="accessibility_control_favorite_position">Favorited, position %d</string>
  <string name="accessibility_control_increase_window_height">Increase height of magnifier</string>
  <string name="accessibility_control_increase_window_width">Increase width of magnifier</string>
  <string name="accessibility_control_move">Move to position %d</string>
  <string name="accessibility_control_move_down">Move down</string>
  <string name="accessibility_control_move_left">Move left</string>
  <string name="accessibility_control_move_right">Move right</string>
  <string name="accessibility_control_move_up">Move up</string>
  <string name="accessibility_control_not_favorite">Unfavorited</string>
  <string name="accessibility_control_zoom_in">Zoom in</string>
  <string name="accessibility_control_zoom_out">Zoom out</string>
  <string name="accessibility_data_saver_on">Data Saver is on</string>
  <string name="accessibility_desc_close">Close</string>
  <string name="accessibility_desc_lock_screen">Lock screen.</string>
  <string name="accessibility_desc_notification_icon">%1$s notification: %2$s</string>
  <string name="accessibility_desc_notification_shade">Notification shade.</string>
  <string name="accessibility_desc_qs_notification_shade">Quick settings and Notification shade.</string>
  <string name="accessibility_desc_quick_settings">Quick settings.</string>
  <string name="accessibility_desc_quick_settings_edit">Quick settings editor.</string>
  <string name="accessibility_desc_work_lock">Work lock screen</string>
  <string name="accessibility_divider">Split screen divider</string>
  <string name="accessibility_enter_hint">enter device</string>
  <string name="accessibility_ethernet_connected">Ethernet.</string>
  <string name="accessibility_ethernet_disconnected">Ethernet disconnected.</string>
  <string name="accessibility_fingerprint_bouncer">Authentication required. Touch the fingerprint sensor to authenticate.</string>
  <string name="accessibility_fingerprint_label">Fingerprint sensor</string>
  <string name="accessibility_floating_button_action_double_tap_to_toggle">toggle</string>
  <string name="accessibility_floating_button_action_move_bottom_left">Move bottom left</string>
  <string name="accessibility_floating_button_action_move_bottom_right">Move bottom right</string>
  <string name="accessibility_floating_button_action_move_out_edge_and_show">Move out edge and show</string>
  <string name="accessibility_floating_button_action_move_to_edge_and_hide_to_half">Move to edge and hide</string>
  <string name="accessibility_floating_button_action_move_top_left">Move top left</string>
  <string name="accessibility_floating_button_action_move_top_right">Move top right</string>
  <string name="accessibility_floating_button_action_remove_menu">Remove</string>
  <string name="accessibility_floating_button_docking_tooltip">Move button to the edge to hide it temporarily</string>
  <string name="accessibility_floating_button_migration_tooltip">Tap to open accessibility features. Customize or replace this button in Settings.

<annotation id="link">View settings</annotation></string>
  <string name="accessibility_floating_button_undo">Undo</string>
  <string name="accessibility_floating_button_undo_message_label_text">%s shortcut removed</string>
  <string name="accessibility_floating_button_undo_message_number_text">{count, plural, =1 {# shortcut removed} other {# shortcuts removed} }</string>
  <string name="accessibility_home">Home</string>
  <string name="accessibility_ime_switch_button">Switch input method</string>
  <string name="accessibility_key">Custom navigation button</string>
  <string name="accessibility_location_active">Location requests active</string>
  <string name="accessibility_lock_icon">Device locked</string>
  <string name="accessibility_magnification_done">Done</string>
  <string name="accessibility_magnification_fullscreen">Full screen</string>
  <string name="accessibility_magnification_large">Large</string>
  <string name="accessibility_magnification_medium">Medium</string>
  <string name="accessibility_magnification_settings_panel_description">Magnification settings</string>
  <string name="accessibility_magnification_small">Small</string>
  <string name="accessibility_magnification_zoom">Zoom</string>
  <string name="accessibility_magnifier_edit">Edit</string>
  <string name="accessibility_magnifier_size">Magnifier size</string>
  <string name="back_button_text">Back</string>
  <string name="close_button_text">Close</string>
  <string name="keyboard_shortcut_clear_text">Clear search query</string>
  <string name="keyboard_shortcut_search_category_current_app">Current app</string>
  <string name="keyboard_shortcut_search_category_input">Input</string>
  <string name="keyboard_shortcut_search_category_open_apps">Open apps</string>
  <string name="keyboard_shortcut_search_category_system">System</string>
  <string name="keyboard_shortcut_search_list_hint">Search shortcuts</string>
  <string name="keyboard_shortcut_search_list_no_result">No shortcuts found</string>
  <string name="keyboard_shortcut_search_list_title">Shortcuts</string>
  <string name="lockscreen_shortcut_left">Left shortcut</string>
  <string name="lockscreen_shortcut_right">Right shortcut</string>
  <string name="lockscreen_unlock_left">Left shortcut also unlocks</string>
  <string name="lockscreen_unlock_right">Right shortcut also unlocks</string>
  <string name="material_clock_toggle_content_description">Select AM or PM</string>
  <string name="material_timepicker_am">AM</string>
  <string name="material_timepicker_pm">PM</string>
  <string name="maximize_button_text">Maximize</string>
  <string name="minimize_button_text">Minimize</string>
  <string name="other">Other</string>
  <string name="screen_pinning_description">This keeps it in view until you unpin. Touch &amp; hold Back and Overview to unpin.</string>
  <string name="screen_pinning_negative">No thanks</string>
  <string name="screen_pinning_positive">Got it</string>
  <string name="screen_pinning_title">App is pinned</string>
  <string name="slice_permission_checkbox">Allow %1$s to show slices from any app</string>
  <string name="slice_permission_text_1">- It can read information from %1$s</string>
  <string name="slice_permission_text_2">- It can take actions inside %1$s</string>
</resources>