<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout android:orientation="vertical"
              android:id="@id/magnifier_panel_view"
              android:background="@drawable/accessibility_magnification_setting_view_bg"
              android:padding="@dimen/magnification_setting_background_padding"
              android:focusable="true"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:contentDescription="@string/accessibility_magnification_settings_panel_description" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:systemui="http://schemas.android.com/apk/res-auto">
  <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
    <TextView android:textAppearance="@style/TextAppearance.MagnificationSetting.Title"
              android:layout_gravity="center_vertical"
              android:focusable="true"
              android:layout_width="0.0dp"
              android:layout_height="wrap_content"
              android:text="@string/accessibility_magnifier_size"
              android:layout_weight="1.0" />
    <Button android:textAppearance="@style/TextAppearance.MagnificationSetting.EditButton"
            android:layout_gravity="center_vertical"
            android:id="@id/magnifier_edit_button"
            android:background="@null"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accessibility_magnifier_edit" />
  </LinearLayout>
  <LinearLayout android:orientation="horizontal"
                android:background="@drawable/accessibility_magnification_setting_view_image_btn_layout_bg"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/magnification_setting_image_button_height"
                android:minWidth="@dimen/magnification_setting_image_button_background_width">
    <ImageButton android:id="@id/magnifier_small_button"
                 android:background="@drawable/accessibility_magnification_setting_view_image_btn_bg"
                 android:layout_width="0.0dp"
                 android:layout_height="@dimen/magnification_setting_image_button_height"
                 android:src="@drawable/ic_magnification_menu_small"
                 android:scaleType="center"
                 android:tint="@color/accessibility_magnification_image_button_tint"
                 android:layout_weight="1.0"
                 android:contentDescription="@string/accessibility_magnification_small"
                 android:tintMode="src_atop" />
    <ImageButton android:id="@id/magnifier_medium_button"
                 android:background="@drawable/accessibility_magnification_setting_view_image_btn_bg"
                 android:layout_width="0.0dp"
                 android:layout_height="@dimen/magnification_setting_image_button_height"
                 android:src="@drawable/ic_magnification_menu_medium"
                 android:scaleType="center"
                 android:tint="@color/accessibility_magnification_image_button_tint"
                 android:layout_weight="1.0"
                 android:contentDescription="@string/accessibility_magnification_medium"
                 android:tintMode="src_atop" />
    <ImageButton android:id="@id/magnifier_large_button"
                 android:background="@drawable/accessibility_magnification_setting_view_image_btn_bg"
                 android:layout_width="0.0dp"
                 android:layout_height="@dimen/magnification_setting_image_button_height"
                 android:src="@drawable/ic_magnification_menu_large"
                 android:scaleType="center"
                 android:tint="@color/accessibility_magnification_image_button_tint"
                 android:layout_weight="1.0"
                 android:contentDescription="@string/accessibility_magnification_large"
                 android:tintMode="src_atop" />
    <ImageButton android:id="@id/magnifier_full_button"
                 android:background="@drawable/accessibility_magnification_setting_view_image_btn_bg"
                 android:layout_width="0.0dp"
                 android:layout_height="@dimen/magnification_setting_image_button_height"
                 android:src="@drawable/ic_open_in_full"
                 android:scaleType="center"
                 android:tint="@color/accessibility_magnification_image_button_tint"
                 android:layout_weight="1.0"
                 android:contentDescription="@string/accessibility_magnification_fullscreen"
                 android:tintMode="src_atop" />
  </LinearLayout>
  <LinearLayout android:orientation="horizontal"
                android:id="@id/magnifier_horizontal_lock_view"
                android:focusable="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/magnification_setting_view_margin">
    <TextView android:textAppearance="@style/TextAppearance.MagnificationSetting.Title"
              android:ellipsize="marquee"
              android:layout_gravity="center_vertical"
              android:id="@id/magnifier_horizontal_lock_title"
              android:layout_width="0.0dp"
              android:layout_height="wrap_content"
              android:text="@string/accessibility_allow_diagonal_scrolling"
              android:scrollHorizontally="true"
              android:singleLine="true"
              android:layout_weight="1.0" />
    <Switch android:theme="@style/MainSwitch.Settingslib"
            android:layout_gravity="center|right"
            android:id="@id/magnifier_horizontal_lock_switch"
            android:layout_width="@dimen/settingslib_switch_track_width"
            android:layout_height="wrap_content"
            android:thumb="@drawable/settingslib_thumb_selector"
            android:track="@drawable/settingslib_track_selector"
            android:switchMinWidth="@dimen/settingslib_switch_track_width" />
  </LinearLayout>
  <TextView android:textAppearance="@style/TextAppearance.MagnificationSetting.Title"
            android:focusable="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/magnification_setting_view_margin"
            android:text="@string/accessibility_magnification_zoom" />
  <com.android.systemui.common.ui.view.SeekBarWithIconButtonsView android:id="@id/magnifier_zoom_slider"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        systemui:r0x7f0402c2="@string/accessibility_control_zoom_in"
                        systemui:r0x7f0402c8="@string/accessibility_control_zoom_out"
                        systemui:r0x7f0404b7="0"
                        systemui:r0x7f040506="10"
                        systemui:r0x7f04068f="@android:color/transparent" />
  <Button android:textAppearance="@style/TextAppearance.MagnificationSetting.DoneButton"
          android:layout_gravity="center_horizontal"
          android:id="@id/magnifier_done_button"
          android:background="@drawable/accessibility_window_magnification_button_done_bg"
          android:focusable="true"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/magnification_setting_view_margin"
          android:text="@string/accessibility_magnification_done" />
</LinearLayout>