<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:paddingStart="16.0dp"
              android:paddingEnd="16.0dp" xmlns:android="http://schemas.android.com/apk/res/android">
  <TextView android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@id/text2"
            android:paddingTop="8.0dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/slice_permission_text_1"
            android:paddingStart="8.0dp" />
  <TextView android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@id/text1"
            android:paddingBottom="16.0dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/slice_permission_text_2"
            android:paddingStart="8.0dp" />
  <CheckBox android:id="@id/slice_permission_checkbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/slice_permission_checkbox" />
</LinearLayout>