<?xml version='1.0' encoding='utf-8' ?>
<ScrollView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fillViewport="true" xmlns:android="http://schemas.android.com/apk/res/android">
  <RelativeLayout android:gravity="center_vertical"
                  android:id="@id/screen_pinning_text_area"
                  android:background="?android:attr/colorAccent"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">
    <TextView android:textSize="24.0sp"
              android:textColor="@android:color/white"
              android:id="@id/screen_pinning_title"
              android:paddingTop="43.0dp"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/screen_pinning_title"
              android:paddingStart="48.0dp"
              android:paddingEnd="48.0dp" />
    <TextView android:textSize="16.0sp"
              android:textColor="@android:color/white"
              android:id="@id/screen_pinning_description"
              android:paddingTop="12.6dp"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/screen_pinning_description"
              android:layout_below="@id/screen_pinning_title"
              android:paddingStart="48.0dp"
              android:paddingEnd="48.0dp" />
    <Button android:textSize="14.0sp"
            android:textColor="@android:color/white"
            android:id="@id/screen_pinning_ok_button"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="36.0dp"
            android:layout_marginTop="18.0dp"
            android:text="@string/screen_pinning_positive"
            android:layout_below="@id/screen_pinning_description"
            android:paddingStart="8.0dp"
            android:paddingEnd="8.0dp"
            android:layout_marginEnd="40.0dp"
            android:layout_alignParentEnd="true"
            style="@android:style/Widget.Material.Button" />
    <Button android:textSize="14.0sp"
            android:textColor="@android:color/white"
            android:id="@id/screen_pinning_cancel_button"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="36.0dp"
            android:text="@string/screen_pinning_negative"
            android:layout_alignTop="@id/screen_pinning_ok_button"
            android:paddingStart="8.0dp"
            android:paddingEnd="8.0dp"
            android:layout_marginEnd="4.0dp"
            android:layout_toStartOf="@id/screen_pinning_ok_button"
            style="@android:style/Widget.Material.Button" />
  </RelativeLayout>
</ScrollView>